--- a/src/components/shopping-cart/cart.css
+++ b/src/components/shopping-cart/cart.css
@@ -1,100 +1,222 @@
-*{
-    margin: 0;
-    padding: 0;
+.navbar-container {
+  padding: 0 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 70vw;
+  height: 100%;
 }
-.navbar-container{
-    padding: 0 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 700px;
+.cart {
+  width: 109px;
+  height: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 10px 10px;
 }
-.cart{
-    width: 90px;
-    height: 30px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border-radius: 5px;
-    cursor: pointer;
+hr {
+  opacity: 0.6;
 }
-.navbar{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 100px;
+  height: auto;
+  width: auto;
+  
 }
-nav{
-    width: 100%;
-    background-color: aqua;
-    height: 60px;
-    line-height: 60px;
-}
-.logo{
-    font-size: 30px;
-    text-decoration: none;
-    min-width: 200px;
-    padding: 5px 0
-}
-.nav-link li{
-    float: left;
-    list-style: none;
-    position: relative;
-    text-decoration: none;
-    gap: 1rem;
-}
-.nav-item > a{
-    list-style: none;
-    text-decoration: none;
-    padding: 0 15px;
-    width: 100%;
-}
-.dropdown{
-    position: relative;
-}
-.dropdown-items{
-    display: block;
-    font-size: 10px;
-    padding: 10px;
-    width: max-content;
-    position: absolute;
-    background: white;
-    font-size: 1rem;
-    top: 50px;
-    border-radius: 5px;
-}
-.dropdown-items  a,.dropdown-items span {
-    height: 20px;
-    display: block;
-    text-decoration: none;
-    line-height: 16px;
-    width: 100%;
-    padding: 5px 0;
-}
-.dropdown{
-    cursor: pointer;
-}
-/* .navbar ul li:hover> .dropdown-items{
-    display: block;
+/* .navbar{
+    display:"flex";
+    flexDirection:"column";
+    height:"max-content"
 } */
-nav ul li ul{
-    position: absolute;
-    background-color: rgb(255, 255, 255);
-    display: block;
-    border-radius: 10px;
+.navbar a {
+  color: black;
 }
-.content{
-    width: 100%;
-    background-color: gray;
-    padding: 50px 0;
+nav {
+  width: 100%;
+  height: 60px;
 }
-.text{
-    width: auto;
+.logo {
+  font-size: 20px;
+  text-decoration: none;
+  width: 200px;
+  font-weight: 400;
+}
+.nav-link li {
+  float: left;
+  list-style: none;
+  position: relative;
+  text-decoration: none;
+  gap: 1rem;
+}
+.nav-link {
+  padding: 0;
+}
+.nav-item > a {
+  list-style: none;
+  text-decoration: none;
+  margin: 15px;
+  width: 100%;
+}
+.dropdown {
+  position: relative;
+}
+.dropdown-items {
+  display: block;
+  padding: 10px;
+  width: 140px;
+  position: absolute;
+  background: white;
+  font-size: 1rem;
+  top: 30px;
+  text-align: start;
+  border-radius: 5px;
+  border: 1px solid #cccdce;
+}
+.toggle::after {
+  display: inline-block;
+  content: "";
+  margin: 0 7px;
+  vertical-align: 5px;
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+}
+.dropdown-items a,
+.dropdown-items span {
+  height: 20px;
+  display: block;
+  text-decoration: none;
+  line-height: 16px;
+  width: 100%;
+  padding: 5px 0;
+}
+.dropdown {
+  cursor: pointer;
 }
 
-.product-list{
-    margin-top: 40px;
-    display: flex;
-    flex-wrap: wrap;
+nav ul li ul {
+  position: absolute;
+  background-color: rgb(255, 255, 255);
+  display: block;
+  border-radius: 10px;
+}
+.content {
+  width: 94%;
+  background-color: #212529;
+  padding: 3%;
+  color: #ffffff;
+  font-size: 27px;
+}
+.text {
+  padding: 50px 0;
+}
+.text p {
+  color: #909294;
+  margin: 0;
+}
+.text h1 {
+  margin: 0;
+}
+.product-list {
+  padding: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: center;
+  align-items: center;
+}
+.itemCount {
+  position: absolute;
+  height: max-content;
+  font-size: 15px;
+  display: initial;
+  width: 20px;
+  border-radius: 50%;
+  background-color: rgb(240, 118, 12);
+  align-items: center;
+  left: 148px;
+  top: 250px;
+}
+.Footer {
+  background-color: #212529;
+  color: #ffffff;
+  font-size: 17px;
+  padding: 45px 10px;
+  margin-top: 40px;
+}
+.NavToggele {
+  display: none;
+}
+.NavToggele svg {
+  height: 40px;
+  width: 40px;
+}
+.nav-link-mob a {
+  color: black;
+}
+.nav-link-mob {
+  width: 80%;
+  text-align: start;
+  font-size: large;
+  line-height: 35px;
+  padding: 0;
+}
+.nav-link-mob li {
+  list-style: none;
+  width: 100%;
+  /* transition: all 3s ease; */
+}
+.navbar-mob {
+  display: none;
+  width: 65%;
+  padding: 0 50px;
+}
+.NavToggele {
+  display: none;
+}
+
+@media (max-width: 990px) {
+  .navbar-container {
+    display: none;
+  }
+  .NavToggele {
+    display: block;
+  }
+  .navbar {
     justify-content: center;
-    align-items: center;
+    padding: 15px 10vw;
+    text-align: justify;
+  }
+  .nav-link {
+    flex-direction: column;
+  }
+  .dropdown-items {
+    width: 100%;
+    position: initial;
+    padding: 20px;
+  }
+  .navbar-mob {
+    display: block;
+    width: 100%;
+  }
+  .NavToggele svg {
+    display: block;
+    width: 1.5rem;
+    height: auto;
+  }
+  .product-list {
+    padding: 50px 0;
+    gap:20px;
+  }
+}
+@media (max-width:990px){
+  .navbar-mob{
+    display: none;
+  }
 }
